--- a/index.html
+++ b/index.html
@@ -18,35 +18,41 @@ canvas { display:block; }
 
 #hud {
   position:absolute;
-  top:16px;
-  left:16px;
+  top:32px;
+  left:32px;
   font-size:13px;
   opacity:0.7;
   pointer-events:none;
   letter-spacing:1px;
   z-index:10;
 }
-
+#status {
+  position:absolute;
+  top:58px;
+  left:32px;
+  font-size:11px;
+  opacity:0.6;
+  z-index:5;
+}
 #data {
   position:absolute;
-  top:50px;
-  left:16px;
+  top:80px;
+  left:32px;
   font-size:10px;
   opacity:0.6;
   pointer-events:none;
   max-width:400px;
   line-height:1.4;
-  z-index: 5;
+  z-index:5;
 }
-
 #data .real { color:#0f0; font-weight:bold; }
 #data .fallback { color:#888; }
 #data .warning { color:#ff0; }
 
 #clock {
   position:absolute;
-  bottom:16px;
-  right:16px;
+  bottom:32px;
+  right:32px;
   font-size:11px;
   opacity:0.45;
   color:#6cf;
@@ -56,20 +62,25 @@ canvas { display:block; }
   z-index:10;
 }
 
-#status {
-  position:absolute;
-  top:40px;
-  left:16px;
-  font-size:11px;
-  opacity:0.6;
-  color:#0af;
-  z-index: 5;
+#section-number {
+  position: fixed;
+  inset: 0;
+  width: fit-content;
+  height: fit-content;
+  margin: auto;
+  font-size: 42vw;
+  font-weight: 900;
+  color: #0a0a0a;
+  user-select: none;
+  pointer-events: none;
+  z-index: 1;
+  line-height: 0.75;
+  text-shadow: 0 0 60px #000;
 }
 
-/* system-link */
 #system-link {
   position: fixed;
-  bottom: 60px;
+  bottom: 80px;
   left: 50%;
   transform: translateX(-50%);
   font-size: 22px;
@@ -81,7 +92,6 @@ canvas { display:block; }
   letter-spacing: 1px;
   transition: all 0.3s;
 }
-
 #system-link:hover {
   opacity: 1;
   color: #0ff;
@@ -89,96 +99,140 @@ canvas { display:block; }
 }
 </style>
 </head>
-<body>
 
+<body>
+<div id="section-number">№2</div>
 <div id="hud">GEOMETRIC CHAOS.ARHIVE.2026 lavanda audit ibonarium project 2026:</div>
 <div id="status"></div>
 <div id="data">ініціалізація...</div>
 <div id="clock">—</div>
-
 <div id="system-link">february.2026</div>
-
 <canvas id="c"></canvas>
 
 <script>
 const canvas = document.getElementById('c');
 const ctx = canvas.getContext('2d');
-const dataDiv = document.getElementById('data');
-const clockDiv = document.getElementById('clock');
-const statusDiv = document.getElementById('status');
 
-function resize() { 
-  canvas.width = window.innerWidth; 
-  canvas.height = window.innerHeight; 
+const EDGE = 80; // ← ОТУТ САМЕ ВІДСТУП (більше чорного)
+
+function resize(){
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
 }
-window.addEventListener('resize', resize); 
+window.addEventListener('resize', resize);
 resize();
 
+/* ------------------ CLOCK ------------------ */
+const clockDiv = document.getElementById('clock');
 const startTime = Date.now();
-
-function formatRelativeTime(ms) {
-  const s = Math.floor(ms / 1000);
-  if (s < 60) return `+${s}s`;
-  const m = Math.floor(s / 60); const sec = s % 60;
-  if (m < 60) return `+${m}m ${sec}s`;
-  const h = Math.floor(m / 60); const min = m % 60;
+function formatRelativeTime(ms){
+  const s = Math.floor(ms/1000);
+  if(s<60) return `+${s}s`;
+  const m=Math.floor(s/60), sec=s%60;
+  if(m<60) return `+${m}m ${sec}s`;
+  const h=Math.floor(m/60), min=m%60;
   return `+${h}h ${min}m`;
 }
-
-function updateClock() {
-  const now = new Date();
-  clockDiv.innerHTML = `${String(now.getHours()).padStart(2,'0')}:${String(now.getMinutes()).padStart(2,'0')}:${String(now.getSeconds()).padStart(2,'0')}<br>${formatRelativeTime(Date.now() - startTime)}`;
+function updateClock(){
+  const n=new Date();
+  clockDiv.innerHTML =
+    `${String(n.getHours()).padStart(2,'0')}:`+
+    `${String(n.getMinutes()).padStart(2,'0')}:`+
+    `${String(n.getSeconds()).padStart(2,'0')}<br>`+
+    formatRelativeTime(Date.now()-startTime);
 }
-setInterval(updateClock, 1000); 
-updateClock();
+setInterval(updateClock,1000); updateClock();
 
-// Зірки
-const stars = [];
-for (let i = 0; i < 300; i++) {
+/* ------------------ STARS ------------------ */
+const stars=[];
+for(let i=0;i<300;i++){
   stars.push({
-    x: Math.random()*canvas.width, 
-    y: Math.random()*canvas.height, 
-    size: Math.random()*1.2+0.4, 
-    baseAlpha: Math.random()*0.4+0.25, 
-    twinkle: Math.random()*0.015+0.006
+    x:Math.random(),
+    y:Math.random(),
+    size:Math.random()*1.2+0.4,
+    a:Math.random()*0.4+0.25,
+    t:Math.random()*0.02+0.006
   });
 }
 
-// Дані
-let realData = {seismic:0.5,magnetic:0.5,atmosphere_wind:0.5,atmosphere_pressure:0.5,atmosphere_temp:0.5,ocean:0.5,solar_radiation:0.5,solar_wind:0.5,precipitation:0.5,chaos:0.5};
-let dataHistory = {}; Object.keys(realData).forEach(k=>dataHistory[k]=[]);
-let sources = {};
-let solarIndices = {f107:120,kp:2.0,ap:12,dst:-15,ssn:85,xray:-6.5,proton:0.3,electron:150,bz:-2.5,density:5.2};
-let solarHistory = {}; Object.keys(solarIndices).forEach(k=>solarHistory[k]=[]);
-let earthEnvData = {air_quality_pm25:15,air_quality_aqi:45,co:0.4,no2:25,o3:40,so2:10,uv_index:3.5,humidity:65,cloud_cover:45,visibility:12};
-let earthEnvHistory = {}; Object.keys(earthEnvData).forEach(k=>earthEnvHistory[k]=[]);
+/* ------------------ DATA (без змін) ------------------ */
+let realData={seismic:0.5,magnetic:0.5,atmosphere_wind:0.5,atmosphere_temp:0.5,
+solar_radiation:0.5,solar_wind:0.5,precipitation:0.5,chaos:0.5};
 
-const blobs = [
-  {param:'seismic',color:'rgba(220,60,80,',phase:0,targetSize:6,targetAlpha:0.75},
-  {param:'magnetic',color:'rgba(60,180,255,',phase:1.2,targetSize:6,targetAlpha:0.75},
-  {param:'atmosphere_wind',color:'rgba(80,255,160,',phase:2.4,targetSize:6,targetAlpha:0.7},
-  {param:'atmosphere_temp',color:'rgba(255,180,60,',phase:3.6,targetSize:6,targetAlpha:0.7},
-  {param:'solar_radiation',color:'rgba(255,240,100,',phase:4.8,targetSize:5,targetAlpha:0.65},
-  {param:'solar_wind',color:'rgba(200,120,255,',phase:6.0,targetSize:6,targetAlpha:0.7},
-  {param:'precipitation',color:'rgba(100,220,255,',phase:7.2,targetSize:6,targetAlpha:0.7}
+const blobs=[
+{param:'seismic',color:'rgba(220,60,80,',phase:0},
+{param:'magnetic',color:'rgba(60,180,255,',phase:1.2},
+{param:'atmosphere_wind',color:'rgba(80,255,160,',phase:2.4},
+{param:'atmosphere_temp',color:'rgba(255,180,60,',phase:3.6},
+{param:'solar_radiation',color:'rgba(255,240,100,',phase:4.8},
+{param:'solar_wind',color:'rgba(200,120,255,',phase:6.0},
+{param:'precipitation',color:'rgba(100,220,255,',phase:7.2}
 ];
+
 blobs.forEach(b=>{
-  b.angle=Math.random()*Math.PI*2;
-  b.radius=60+Math.random()*50;
-  b.currentSize=b.targetSize;
-  b.currentAlpha=b.targetAlpha;
-  b.currentDist=b.radius;
+  b.a=Math.random()*Math.PI*2;
+  b.r=80;
+  b.s=6;
 });
 
-function lerp(a,b,t){return a+(b-a)*t;}
+/* ------------------ LOOP ------------------ */
+let t=0;
+function loop(){
+  t+=0.016;
 
-/* --- далі код без жодних змін --- */
+  ctx.fillStyle='rgba(0,0,0,0.1)';
+  ctx.fillRect(0,0,canvas.width,canvas.height);
 
-... (код анімації, графіків, fetch, loop — **повністю збережений**, як у тебе)
+  const W = canvas.width - EDGE*2;
+  const H = canvas.height - EDGE*2;
+  const cx = EDGE + W/2;
+  const cy = EDGE + H/2;
 
-document.getElementById('system-link').addEventListener('click', () => {
-  window.open('https://lavandaaudit.github.io/indicator-100-live-/', '_blank', 'noopener,noreferrer');
-});
+  // stars
+  stars.forEach(s=>{
+    const x = EDGE + s.x*W;
+    const y = EDGE + s.y*H;
+    const tw = Math.sin(t*s.t*10)*0.15;
+    ctx.fillStyle=`rgba(220,235,255,${Math.max(0.08,s.a+tw)})`;
+    ctx.fillRect(x,y,s.size,s.size);
+  });
+
+  // spirals
+  for(let k=0;k<4;k++){
+    ctx.beginPath();
+    for(let i=0;i<160;i++){
+      const ang=i*0.18+t*0.6+k;
+      const r=i*0.6+40;
+      const x=cx+Math.cos(ang)*r;
+      const y=cy+Math.sin(ang)*r;
+      i?ctx.lineTo(x,y):ctx.moveTo(x,y);
+    }
+    ctx.strokeStyle=`rgba(255,${120+k*30},${80+k*20},0.12)`;
+    ctx.lineWidth=1.2;
+    ctx.stroke();
+  }
+
+  // blobs
+  blobs.forEach(b=>{
+    b.a+=0.01;
+    const pulse=Math.sin(t+b.phase)*0.3;
+    const r=90+pulse*40;
+    const x=cx+Math.cos(b.a)*r;
+    const y=cy+Math.sin(b.a)*r;
+    ctx.fillStyle=b.color+(0.6+pulse*0.3).toFixed(2)+')';
+    ctx.beginPath();
+    ctx.arc(x,y,6+pulse*3,0,Math.PI*2);
+    ctx.fill();
+  });
+
+  requestAnimationFrame(loop);
+}
+loop();
+
+/* ------------------ LINK ------------------ */
+document.getElementById('system-link').onclick=()=>{
+  window.open('https://lavandaaudit.github.io/indicator-100-live-','_blank','noopener');
+};
 </script>
 </body>
 </html>
